tests/baselines/reference/destructuringTypeAssertionsES5_6.errors.txt
tests/cases/conformance/es6/destructuring/destructuringTypeAssertionsES5_6.ts(1,22): error TS2304: Cannot find name 'Foo'.


==== tests/cases/conformance/es6/destructuring/destructuringTypeAssertionsES5_6.ts (1 errors) ====
    var { x } = <any>new Foo;
                         ~~~
!!! error TS2304: Cannot find name 'Foo'.